--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,6 @@
 </head>
 <body>
   <h2 class= "title"> Do campo para a cidade colhendo oportunidades</h2>
-  <p class="paragrafo"></p>
+  <img src="campo.png" alt="">
 </body>
 </html>
